clmpkg/objects/Agreement_Revision_History__c.object
<CustomObject>
    <description>This object holds the changes made on agreements during amendment.This drives the data on Summary Component.</description>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreement_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel_Action__c</fullName>
        <label>Channel Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_SF_ID__c</fullName>
        <label>Channel SF ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Agreement Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Revision History</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Agreement Revision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Revision Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>